force-app/main/default/objects/Scorecard__c/fields/Scorecard_Channel__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Channel__c</fullName>
    <label>Scorecard Channel</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Indirect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>