force-app/main/default/objects/Scorecard__c/fields/Scorecard_Template__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Template__c</fullName>
    <label>Scorecard Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>C&amp;I</fullName>
            </value>
            <value>
                <fullName>Biogas</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Energy Infrastructure</fullName>
            </value>
            <value>
                <fullName>Data Center</fullName>
            </value>
            <value>
                <fullName>Utility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>