force-app/main/default/objects/Scorecard__c/fields/Scorecard_Type__c.field-meta.xml
<CustomField>
    <fullName>Scorecard_Type__c</fullName>
    <label>Scorecard Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Scorecard_Type</valueSetName>
    </valueSet>
</CustomField>